# deboa

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  MIGRATION_GUIDE.md  README.md  samoyed.toml
deboa/: AGENTS.md  Cargo.toml  README.md
deboa-bora/: AGENTS.md  Cargo.toml  README.md
deboa-bora/src/: lib.rs
deboa-bora/src/bora/: api.rs
deboa-bora/src/parser/: api.rs
deboa-bora/src/parser/common/: field.rs
deboa-bora/src/parser/operations/: delete.rs  get.rs  patch.rs  post.rs  put.rs
deboa-bora/src/token/: utils.rs
deboa-bora/tests/bora/: delete.rs  get.rs  patch.rs  post.rs  put.rs
deboa-extras/: AGENTS.md  Cargo.toml  README.md
deboa-extras/src/: errors.rs  lib.rs
deboa-extras/src/catcher/: encoding.rs
deboa-extras/src/compression/: brotli.rs  deflate.rs  gzip.rs  mod.rs
deboa-extras/src/http/: json.rs  mod.rs
deboa-extras/src/http/serde/: cbor.rs  flex.rs  json.rs  mod.rs  msgpack.rs  rkyv.rs  xml.rs  yaml.rs
deboa-extras/src/http/sse/: event.rs  listener.rs  mod.rs  request.rs  response.rs
deboa-extras/src/http/stream/: file.rs
deboa-extras/src/http/utils/: file.rs  mod.rs
deboa-extras/src/http/ws/: protocol.rs  request.rs  response.rs
deboa-extras/src/interceptor/: encoding.rs
deboa-extras/src/io/: brotli.rs  deflate.rs  gzip.rs
deboa-extras/src/serde/: cbor.rs  yaml.rs
deboa-extras/src/serialization/: json.rs  msgpack.rs
deboa-extras/src/tests/: json.rs  mod.rs  msgpack.rs  types.rs
deboa-extras/src/tests/http/: json.rs  mod.rs
deboa-extras/src/tests/io/: brotli.rs  deflate.rs  gzip.rs  mod.rs
deboa-extras/src/tests/serde/: cbor.rs  flex.rs  json.rs  msgpack.rs  xml.rs  yaml.rs
deboa-extras/src/ws/: mod.rs  protocol.rs  request.rs  response.rs
deboa-extras/src/ws/io/: mod.rs  socket.rs
deboa-fory/: AGENTS.md  Cargo.toml  README.md
deboa-fory/src/: lib.rs
deboa-fory/src/tests/: mod.rs
deboa-macros/: AGENTS.md  Cargo.toml  README.md
deboa-macros/src/: lib.rs
deboa-macros/src/actions/: delete.rs  get.rs  mod.rs  patch.rs  post.rs  put.rs  submit.rs
deboa-macros/src/bora/: api.rs  delete.rs  get.rs  mod.rs  parser.rs  patch.rs  post.rs  put.rs
deboa-macros/src/parser/: mod.rs  utils.rs
deboa-macros/src/parser/common/: field.rs
deboa-macros/src/parser/operations/: delete.rs  get.rs  patch.rs  post.rs  put.rs
deboa-macros/src/tests/: delete.rs  get.rs  patch.rs  put.rs
deboa-macros/src/token/: utils.rs
deboa-macros/tests/: delete.rs  fetch.rs  get.rs  mod.rs  patch.rs  post.rs  put.rs  submit.rs
deboa-macros/tests/bora/: delete.rs  mod.rs  post.rs  put.rs
deboa-smol/: Cargo.toml  README.md
deboa-smol/benches/: benchmark.rs
deboa-smol/src/: cert.rs  lib.rs
deboa-smol/src/client/: http1.rs  http2.rs  http3.rs  mod.rs
deboa-smol/src/client/conn/: dns.rs  mod.rs  pool.rs  (+1 more)
deboa-smol/src/rt/: executor.rs  mod.rs  plain.rs  stream.rs
deboa-smol/src/tests/: catcher.rs  client.rs  form.rs  helpers.rs  mod.rs  request.rs  response.rs  url.rs
deboa-smol/tests/common/: data.rs  helpers.rs
deboa-smol/tests/deboa_fory/: mod.rs
deboa-smol/tests/deboa_macros/: delete.rs  fetch.rs  get.rs  mod.rs  patch.rs  post.rs  put.rs  submit.rs
deboa-smol/tests/vamo/: mod.rs
deboa-smol/tests/vamo_macros/: mod.rs
deboa-tests/: Cargo.toml
deboa-tests/certs/: ca.crt  ca.key  ca.pem  ca.srl  client.crt  client.csr  client.key  root-ca.key.pem  server.crt  server.csr  server.key  server.pem
deboa-tests/src/: data.rs  lib.rs  utils.rs
deboa-tests/src/rt/: mod.rs  task.rs
deboa-tests/src/server/: errors.rs  mod.rs
deboa-tokio/: Cargo.toml  README.md
deboa-tokio/benches/: benchmark.rs
deboa-tokio/src/: cert.rs  lib.rs
deboa-tokio/src/client/: http1.rs  http2.rs  http3.rs  mod.rs
deboa-tokio/src/rt/: mod.rs  plain.rs  stream.rs
deboa-tokio/src/tests/: cert.rs  client.rs  form.rs  helpers.rs  mod.rs  request.rs  response.rs
deboa-tokio/tests/: mod.rs
deboa-tokio/tests/common/: data.rs  helpers.rs  mod.rs
deboa-tokio/tests/deboa_fory/: mod.rs
deboa-tokio/tests/deboa_macros/: delete.rs  fetch.rs  get.rs  patch.rs  post.rs  put.rs  submit.rs
deboa-tokio/tests/vamo/: mod.rs
deboa/benches/: benchmark.rs  deboa_benchmark.rs
deboa/src/: cache.rs  catcher.rs  cert.rs  compression.rs  cookie.rs  dns.rs  errors.rs  form.rs  interceptor.rs  io.rs  lib.rs  middleware.rs  middlewares.rs  request.rs  response.rs  url.rs
deboa/src/client/: http1.rs  http2.rs  http3.rs  mod.rs  serde.rs
deboa/src/fs/: io.rs  mod.rs
deboa/src/http/: io.rs  serde.rs
deboa/src/rt/: mod.rs
deboa/src/runtimes/: mod.rs
deboa/src/tests/: base.rs  catcher.rs  cert.rs  client.rs  cookie.rs  delete.rs  form.rs  get.rs  helpers.rs  interceptor.rs  mod.rs  patch.rs  post.rs  put.rs  request.rs  response.rs  types.rs  url.rs  utils.rs
examples/blog/: Cargo.toml  README.md
examples/blog/src/: main.rs
examples/catcher/: Cargo.toml  README.md
examples/catcher/src/: main.rs
examples/cbor/: Cargo.toml  README.md  server.py
examples/cbor/src/: main.rs
examples/chat/: Cargo.toml  README.md
examples/chat/src/: echo.rs  main.rs
examples/middleware/: Cargo.toml
examples/middleware/src/: main.rs
examples/postman/: Cargo.toml  README.md
examples/postman/src/: main.rs  post_service.rs
examples/rurl/: Cargo.toml  README.md
examples/rurl/src/: main.rs
examples/simple/: Cargo.toml  README.md
examples/simple-smol/: Cargo.toml
examples/simple-smol/src/: main.rs
examples/simple/src/: main.rs
examples/sse/: Cargo.toml  README.md
examples/sse/src/: ai.rs  app.rs  event.rs  main.rs  ui.rs
examples/uget/: Cargo.toml  README.md
examples/uget/src/: main.rs
src/macros/bora/: Cargo.toml
vamo/: AGENTS.md  Cargo.toml  README.md
vamo-macros/: AGENTS.md  Cargo.toml  README.md
vamo-macros/src/: lib.rs
vamo-macros/src/bora/: mod.rs
vamo-macros/src/resource/: mod.rs
vamo-macros/tests/: derive.rs  mod.rs
vamo-macros/tests/bora/: delete.rs  get.rs  patch.rs  post.rs  put.rs
vamo-macros/tests/resource/: mod.rs
vamo/src/: lib.rs  resource.rs
vamo/src/tests/: integrated.rs  mod.rs
(+239 files in other folders)
