[workspace]
# Use the latest resolver available
resolver = "3"
# Include both parts of the library in the workspace
members = [
    "deboa",
    "deboa-extras",
    # "deboa-fory",
    # "deboa-macros",
    # "examples/blog",
    # "examples/catcher",
    # "examples/cbor",
    # "examples/chat",
    # "examples/postman",
    # "examples/simple",
    # "examples/sse",
    # "vamo",
    # "vamo-macros", 
]

[profile.release]
strip = true
opt-level = "z" 
lto = true
codegen-units = 1
panic = "abort"
