[workspace]
# Use the latest resolver available
resolver = "3"
# Include both parts of the library in the workspace
members = [
    "deboa",
    #"deboa-compio",
    "deboa-extras",
    "deboa-fory",
    "deboa-macros",
    "deboa-smol",
    "deboa-tokio",
    # "examples/blog",
    # "examples/catcher",
    # "examples/cbor",
    # "examples/postman",
    # "examples/simple",
    # "examples/simple-smol",
    "vamo",
    "vamo-macros", 
]

[profile.release]
strip = true
opt-level = "z" 
lto = true
codegen-units = 1
panic = "abort"
