[workspace]
# Use the latest resolver available
resolver = "3"
# Include both parts of the library in the workspace
members = [
    "deboa",
    #"deboa-compio",
    "deboa-extras",
    "deboa-fory",
    "deboa-macros",
    "deboa-smol",
    "deboa-tokio",
    # "examples/blog",
    # "examples/catcher",
    # "examples/cbor",
    # "examples/postman",
    # "examples/simple",
    # "examples/simple-smol",
    "vamo",
    "vamo-macros",
]

[workspace.package]
edition = "2021"
authors = ["Rogerio Araújo <rogerio.araujo@gmail.com>"]
repository = "https://github.com/ararog/deboa"
homepage = "https://github.com/ararog/deboa"
readme = "README.md"
license = "MIT OR Apache-2.0"
rust-version = "1.75.0"

[workspace.dependencies]
deboa = { version = "0.1.0-beta.18", path = "deboa" }
deboa-extras = { version = "0.0.9-beta.11", path = "deboa-extras" }
deboa-fory = { version = "0.1.6-beta.1", path = "deboa-fory" }
deboa-macros = { version = "0.1.0-beta.4", path = "deboa-macros" }
deboa-tokio = { version = "0.1.0-beta.5", path = "deboa-tokio" }
vamo = { version = "0.0.9-beta.5", path = "vamo" }
vamo-macros = { version = "0.0.9-beta.5", path = "vamo-macros" }

[profile.test]
lto = false

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
