[package]
name = "deboa-bora"
edition = "2021"
version = "0.0.2"
authors = ["Rogerio Araújo <rogerio.araujo@gmail.com>"]
description = "bora macro for deboa"
license = "MIT"
repository = "https://github.com/ararog/deboa"
readme = "README.md"
keywords = ["compiler-plugin"]
exclude = [".travis.yml"]
publish = true
rust-version = "1.64.0"

[lib]
proc-macro = true

[features]
default = ["json"]
json = ["deboa-extras/json"]
xml = ["deboa-extras/xml"]
msgpack = ["deboa-extras/msgpack"]

[dependencies]
deboa = { path = "../deboa", version = "0.0.5", features = ["http1"] }
vamo = { path = "../vamo", version = "0.0.1" }
deboa-extras = { path = "../deboa-extras", version = "0.0.1", features = ["json"] }
proc-macro2 = "1.0.101"
tokio = { version = "1.47.1", features = ["full"] }
serde = "1.0.219"
syn = "2.0.106"
quote = "1.0.40"
proc-macro-error = "1.0.4"
regex = "1.11.2"
titlecase = "3.6.0"

[dev-dependencies]
deboa-tests = { path = "../deboa-tests", version = "0.0.1" }
httpmock = { version = "0.8.0-alpha.1", features = ["http2"] }
tokio = "1.47.1"

