[package]
name = "deboa-bora"
edition = "2021"
version = "0.0.4"
authors = ["Rogerio Araújo <rogerio.araujo@gmail.com>"]
description = "bora macro for deboa"
license = "MIT"
repository = "https://github.com/ararog/deboa"
readme = "README.md"
keywords = ["compiler-plugin"]
exclude = [".travis.yml"]
publish = true
rust-version = "1.64.0"

[lib]
proc-macro = true

[features]
default = ["json"]
json = ["deboa-extras/json"]
xml = ["deboa-extras/xml"]
msgpack = ["deboa-extras/msgpack"]

[dependencies]
deboa = { path = "../deboa", version = "0.0.7", features = ["http1"] }
vamo = { path = "../vamo", version = "0.0.3" }
deboa-extras = { path = "../deboa-extras", version = "0.0.3", features = ["json"] }
proc-macro2 = "1.0.103"
tokio = { version = "1.47.2", features = ["rt-multi-thread"] }
serde = "1.0.228"
syn = "2.0.106"
quote = "1.0.41"
proc-macro-error = "1.0.4"
regex = "1.12.2"
titlecase = "3.6.0"

[dev-dependencies]
deboa-tests = { path = "../deboa-tests", version = "0.0.1" }
httpmock = { version = "0.8.2", features = ["http2"] }

