[package]
name = "deboa-extras"
version = "0.0.4"
edition = "2021"
authors = ["Rogerio Araújo <rogerio.araujo@gmail.com>"]
repository = "https://github.com/ararog/deboa"
homepage = "https://github.com/ararog/deboa"
description = "deboa extras (serialization and decompression)."
readme = "README.md"
license = "MIT"
keywords = ["http", "serialization", "client", "serde", "compression"]
publish = true
rust-version = "1.64.0"

[features]
default = ["serialization", "compression", "sse", "utils", "websockets", "tokio"]
sse = ["dep:http-body-util", "dep:deboa"]
utils = ["dep:deboa"]
websockets = ["dep:deboa", "dep:base64", "dep:rand", "dep:ws-framer"]
# serialization
serialization_all = ["json", "xml", "msgpack"]
serialization = ["json"]
json = ["dep:serde_json", "dep:serde", "dep:http", "dep:mime", "dep:deboa"]
xml = ["dep:serde-xml-rust", "dep:serde", "dep:http", "dep:mime", "dep:deboa"]
msgpack = ["dep:rmp-serde", "dep:serde", "dep:http", "dep:mime", "dep:deboa"]
# compression
compression_all = ["gzip", "brotli", "deflate"]
compression = ["gzip"]
brotli = ["dep:brotli", "dep:bytes", "dep:deboa"]
deflate = ["dep:flate2", "dep:bytes", "dep:deboa"]
gzip = ["dep:flate2", "dep:bytes", "dep:deboa"]

# runtime
tokio = ["dep:tokio", "dep:tokio-util", "dep:hyper", "dep:hyper-util"]
smol = ["dep:smol", "dep:smol-hyper", "dep:hyper", "dep:hyper-util"]

[dependencies]
base64 = { version = "0.22.1", optional = true }
brotli = { version = "8.0.2", optional = true }
bytes = { version = "1.10.1", optional = true }
deboa = { path = "../deboa", version = "0.0.8", features = [
  "http1", "tokio-rt"
], optional = true }
flate2 = { version = "1.1.5", optional = true }
futures = "0.3.31"
futures-util = "0.3.31"
http = { version = "1.3.1", optional = true }
http-body-util = { version = "0.1.3", optional = true }
hyper = { version = "1.7.0", optional = true }
hyper-util = { version = "0.1.17", optional = true }
mime = { version = "0.3.17", optional = true }
mime_typed = "0.1.7"
pin-project-lite = "0.2.16"
rand = { version = "0.9.2", optional = true }
rmp-serde = { version = "1.3.0", optional = true }
serde = { version = "1.0.217", features = ["derive"], optional = true }
serde-xml-rust = { version = "0.6.0", optional = true }
serde_json = { version = "1.0.138", optional = true }
smol = { version = "2.0.2", optional = true }
smol-hyper = { version = "0.1.1", optional = true }
thiserror = "2.0.17"
tokio = { version = "1.47.2", optional = true }
tokio-util = { version = "0.7.11", optional = true }
url = "2.5.7"
ws-framer = { version = "0.3.1", optional = true }

[dev-dependencies]
deboa-tests = { path = "../deboa-tests", version = "0.0.1" }
httpmock = { version = "0.8.2", features = ["http2"] }
tokio = { version = "1.47.2", features = ["rt-multi-thread"] }
ws-mock = "0.4.0"
