[package]
name = "deboa-extras"
version = "0.0.9-beta.10"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "deboa extras (serialization, compression, websockets, streams, catchers (middleware) and sse support)."
readme.workspace = true
license.workspace = true
keywords = ["http", "serialization", "compression", "websockets", "sse"]
publish = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
default = [
  "json",
  "xml",
  "msgpack",
  #"sse",
  "utils",
]
sse = ["dep:hyper-body-utils", "dep:http-body-util", "dep:hyper", "dep:bytes"]
utils = []
#websockets = ["dep:base64", "dep:rand", "ws-framer/http", "ws-framer/alloc"]
# serialization
serialization_all = ["json", "xml", "msgpack", "yaml", "flex", "cbor"]
json = ["simd_json", "dep:serde", "dep:http", "dep:mime", "dep:deboa"]
xml = ["dep:serde-xml-rust", "dep:serde", "dep:http", "dep:mime", "dep:deboa"]
msgpack = ["dep:rmp-serde", "dep:serde", "dep:http", "dep:mime", "dep:deboa"]
yaml = ["dep:serde-saphyr", "dep:serde", "dep:http", "dep:mime", "dep:deboa"]
flex = ["dep:flexbuffers", "dep:serde", "dep:http", "dep:mime", "dep:deboa"]
cbor = ["ciborium/std", "dep:serde", "dep:http", "dep:deboa"]
# compression
compression_all = ["gzip", "brotli", "deflate"]
brotli = ["dep:brotli", "dep:http", "dep:bytes", "dep:deboa"]
deflate = ["flate2/rust_backend", "dep:http", "dep:bytes", "dep:deboa"]
gzip = ["flate2/rust_backend", "dep:http", "dep:bytes", "dep:deboa"]

simd_json = ["simd-json/serde_impl"]
sonic_json = ["dep:sonic-rs"]

[dependencies]
base64 = { version = "0.22.1", optional = true, default-features = false }
brotli = { version = "8.0.3", optional = true, default-features = false }
bytes = { version = "1.11.1", optional = true, default-features = false }
ciborium = { version = "0.2.2", optional = true, default-features = false }
deboa = { workspace = true, optional = true, default-features = false }
flate2 = { version = "1.1.9", optional = true, default-features = false }
flexbuffers = { version = "25.12.19", optional = true, default-features = false }
futures = "0.3.31"
futures-util = "0.3.31"
http = { version = "1.4.2", optional = true, default-features = false }
http-body-util = { version = "0.1.3", optional = true, default-features = false }
hyper = { version = "1.10.1", optional = true, default-features = false }
hyper-body-utils = { version = "0.1.6-beta.2", optional = true, default-features = false }
hyper-util = { version = "0.1.20", optional = true, default-features = false }
mime = { version = "0.3.17", optional = true, default-features = false }
mime_typed = "0.1.7"
pin-project-lite = "0.2.16"
rand = { version = "0.10.1", optional = true, default-features = false }
rmp-serde = { version = "1.3.0", optional = true, default-features = false }
serde = { version = "1.0.217", features = ["derive"], optional = true, default-features = false }
serde-saphyr = { version = "0.0.27", optional = true, default-features = false }
serde-xml-rust = { version = "0.6.0", optional = true, default-features = false }
simd-json = { version = "0.14.3", optional = true, default-features = false }
sonic-rs = { version = "0.5.6", optional = true, default-features = false }
thiserror = "2.0.17"
url = "2.5.8"
#ws-framer = { version = "0.3.1", optional = true, default-features = false }

[dev-dependencies]
ws-mock = "0.5.0"
