[package]
name = "deboa-fory"
version = "0.1.5"
edition = "2021"
authors = ["Rogerio Araújo <rogerio.araujo@gmail.com>"]
repository = "https://github.com/ararog/deboa"
homepage = "https://github.com/ararog/deboa"
description = "Apache Fory serializer support for Deboa"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["http", "networking", "rest", "serializer", "fory"]
rust-version = "1.70.0"

[features]
default = []

[dependencies]
deboa = { workspace = true, default-features = false }
fory = "0.14.1"
fory-core = "0.14.0"
http = "1.4.0"
