[package]
name = "deboa-fory"
version = "0.1.6-beta.1"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Apache Fory serializer support for Deboa"
readme.workspace = true
license.workspace = true
keywords = ["http", "networking", "rest", "serializer", "fory"]
publish = true
rust-version.workspace = true

[features]
default = []

[dependencies]
deboa = { workspace = true, default-features = false }
fory = "1.1.0"
fory-core = "1.1.0"
http = "1.4.0"
