[package]
name = "deboa-macros"
edition = "2021"
version = "0.1.0-beta.1"
authors = ["Rogerio Araújo <rogerio.araujo@gmail.com>"]
description = "Request macros for the deboa HTTP client"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ararog/deboa"
readme = "README.md"
keywords = ["compiler-plugin", "macros"]
exclude = [".travis.yml"]
publish = true
rust-version = "1.75.0"

[features]
default = [
  "json",
]
json = ["deboa-extras/json"]
xml = ["deboa-extras/xml"]
msgpack = ["deboa-extras/msgpack"]

[dependencies]
deboa = { workspace = true, default-features = false }
deboa-extras = { workspace = true, default-features = false, optional = true }
http = "1.4.0"
serde = "1.0.228"

[dev-dependencies]
deboa-tokio = { workspace = true }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
