[package]
name = "deboa-macros"
version = "0.1.0-beta.3"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Request macros for the deboa HTTP client"
readme = "README.md"
license.workspace = true
keywords = ["compiler-plugin", "macros"]
publish = true
rust-version.workspace = true

[features]
default = [
  "json",
]
json = ["deboa-extras/json"]
xml = ["deboa-extras/xml"]
msgpack = ["deboa-extras/msgpack"]

[dependencies]
deboa = { workspace = true, default-features = false }
deboa-extras = { workspace = true, default-features = false, optional = true }
http = "1.4.0"
serde = "1.0.228"

[dev-dependencies]
deboa-tokio = { workspace = true }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
