[package]
name = "deboa-smol"
version = "0.1.0-beta.5"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "A friendly rest client on top of hyper."
readme = "README.md"
license.workspace = true
keywords = ["http", "networking", "client", "fetch", "rest-client"]
publish = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
default = [
  "http2",
  "rust-tls",
  "default-rustls-provider",
  "default-rustls-verifier",
]

# tls
rust-tls = [
  "dep:rustls",
  "dep:rustls-native-certs",
  "dep:futures-rustls",
  "dep:rustls-pki-types",
]

webpki-rustls-verifier = ["__webpki_rustls_verifier"]
platform-rustls-verifier = ["__platform_rustls_verifier"]

default-rustls-verifier = ["__webpki_rustls_verifier"]
__webpki_rustls_verifier = ["dep:webpki-roots"]
__platform_rustls_verifier = ["dep:rustls-platform-verifier"]

# rustls providers
no-provider = []
aws-lc-rustls-provider = ["__rustls_aws_lc_rs"]
ring-rustls-provider = ["__rustls_ring"]
rustcrypto-rustl-provider = ["__rustls_rustcrypto"]

default-rustls-provider = ["__rustls_aws_lc_rs"]
__rustls_aws_lc_rs = [
  "futures-rustls/aws-lc-rs",
  "quinn/rustls-aws-lc-rs",
]
__rustls_ring = [
  "futures-rustls/ring",
  "quinn/rustls-ring",
]
__rustls_rustcrypto = ["dep:rustls-rustcrypto"]

native-tls = ["async-native-tls/runtime-smol"]

# protocols
http1 = ["hyper/http1", "hyper-util/http1"]
http2 = ["hyper/http2", "hyper-util/http2"]
http3 = [
  "dep:h3",
  "dep:h3-quinn",
  "quinn/runtime-smol",
  "hyper-body-utils/http3",
]

[dependencies]
async-executor = { version = "1.13.3", optional = true, default-features = false }
async-native-tls = { version = "0.6.0", optional = true, default-features = false }
async-trait = "0.1.89"
base64 = "0.22.1"
bytes = { version = "1.11" }
cookie = "0.18.1"
deboa = { workspace = true }
futures = "0.3.31"
futures-rustls = { version = "0.26.0", optional = true, default-features = false }
futures-util = { version = "0.3.31", optional = true, default-features = false }
h3 = { version = "0.0.8", optional = true, default-features = false }
h3-quinn = { version = "0.0.10", optional = true, default-features = false }
http = "1"
http-body = "1"
http-body-util = "0.1"
hyper = { version = "1.10.1", features = ["client"], default-features = false }
hyper-body-utils = { version = "0.1.7" }
hyper-util = { version = "0.1.20", features = [
  "client",
  "client-legacy",
], default-features = false }
indexmap = "2.11.4"
log = "0.4.32"
macro_rules_attribute = { version = "0.2.2", default-features = false }
minimime = "1.0.0"
mockall = "0.14.0"
quinn = { version = "0.11.7", optional = true, default-features = false }
rand = "0.10.1"
regex = "1.12.4"
rustls = { version = "0.23.36", optional = true, default-features = false }
rustls-native-certs = { version = "0.8.4", optional = true, default-features = false }
rustls-pki-types = { version = "1.14.1", optional = true, default-features = false }
rustls-platform-verifier = { version = "0.7.0", optional = true, default-features = false }
rustls-rustcrypto = { version = "0.0.2-alpha", optional = true, default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
smol = { version = "2.0.2", default-features = false }
smol-hyper = { version = "0.1.0", default-features = false }
smol-macros = { version = "0.1.1", default-features = false }
thiserror = "2.0.17"
time = "0.3.51"
url = "2.5.8"
urlencoding = "2.1.3"
webpki-roots = { version = "1.0.6", optional = true, default-features = false }

[dev-dependencies]
criterion = { version = "0.8.2", features = [
  "html_reports",
  "async",
  "async_smol",
] }
deboa-extras = { workspace = true, default-features = false }
deboa-fory = { workspace = true, default-features = false }
deboa-macros = { workspace = true }
easyhttpmock-vetis-smol = { version = "0.1.0-beta.5", features = [
  "http2",
  "rust-tls",
], default-features = false }
fory = "1.1.0"
fory-core = "1.1.0"
futures-util = "0.3.31"
mime = { version = "0.3.17" }
multer = "3.1.0"
smol = "2.0.2"
vamo = { workspace = true, default-features = false }
vamo-macros = { workspace = true, features = [
  "json",
], default-features = false }

[[bench]]
name = "benchmark"
harness = false
