[package]
name = "deboa-tests"
version = "0.0.1"
edition = "2021"
authors = ["Rogerio Araújo <rogerio.araujo@gmail.com>"]
repository = "https://github.com/ararog/deboa"
homepage = "https://github.com/ararog/deboa"
description = "Tests for deboa"
readme = "README.md"
license = "MIT"
keywords = ["http", "networking", "client", "fetch", "rest-client"]
publish = false
rust-version = "1.64.0"

[features]
default = ["tokio-rt", "http2", "tokio-rust-tls"]

tokio-rt = ["easyhttpmock/tokio-rt", "vetis/tokio-rt"]
smol-rt = ["easyhttpmock/smol-rt", "vetis/smol-rt"]

tokio-rust-tls = ["easyhttpmock/tokio-rust-tls", "vetis/tokio-rust-tls"]
smol-rust-tls = ["easyhttpmock/smol-rust-tls", "vetis/smol-rust-tls"]

http1 = ["easyhttpmock/http1", "vetis/http1"]
http2 = ["easyhttpmock/http2", "vetis/http2"]
http3 = ["easyhttpmock/http3", "vetis/http3"]

[dependencies]
easyhttpmock = { version = "0.1.0", optional = true, default-features = false }
vetis = { version = "0.1.0", optional = true, default-features = false}
http = "1.4.0"
mime = "0.3.17"
rand = "0.9.2"
serde = "1.0.226"
serde_json = "1.0.145"
smol = { version = "2.0.2", optional = true }
smol-hyper = { version = "0.1.1", optional = true }
smol-macros = { version = "0.1.1", optional = true }
thiserror = "2.0.17"
tokio = { version = "1.38.1", optional = true }
url = "2.5.7"
