[package]
name = "deboa-tokio"
version = "0.1.0-beta.1"
edition = "2021"
authors = ["Rogerio Araújo <rogerio.araujo@gmail.com>"]
repository = "https://github.com/ararog/deboa"
homepage = "https://github.com/ararog/deboa"
description = "A friendly rest client on top of hyper."
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["http", "networking", "client", "fetch", "rest-client"]
publish = true
rust-version = "1.75.0"

[package.metadata.docs.rs]
all-features = true

[features]
default = [
  "http2",
  "rust-tls",
  "default-rustls-provider",
  "default-rustls-verifier",
]

rust-tls = [
  "dep:rustls",
  "dep:rustls-native-certs",
  "dep:tokio-rustls",
  "dep:rustls-pki-types",
]

webpki-rustls-verifier = ["__webpki_rustls_verifier"]
platform-rustls-verifier = ["__platform_rustls_verifier"]

default-rustls-verifier = ["__webpki_rustls_verifier"]
__webpki_rustls_verifier = ["dep:webpki-roots"]
__platform_rustls_verifier = ["dep:rustls-platform-verifier"]

# rustls providers
no-provider = []
aws-lc-rustls-provider = ["__rustls_aws_lc_rs"]
ring-rustls-provider = ["__rustls_ring"]
rustcrypto-rustl-provider = ["__rustls_rustcrypto"]

default-rustls-provider = ["__rustls_aws_lc_rs"]
__rustls_aws_lc_rs = [
  "futures-rustls/aws-lc-rs",
  #"tokio-rustls/aws-lc-rs",
  "quinn/rustls-aws-lc-rs",
]
__rustls_ring = [
  "futures-rustls/ring",
  #"tokio-rustls/ring",
  "quinn/rustls-ring",
]
__rustls_rustcrypto = ["dep:rustls-rustcrypto"]

# tls implementations
native-tls = ["async-native-tls/runtime-tokio"]

# protocols
http1 = ["hyper/http1", "hyper-util/http1"]
http2 = ["hyper/http2", "hyper-util/http2"]
http3 = [
  "dep:h3",
  "dep:h3-quinn",
  "quinn/runtime-tokio",
  "hyper-body-utils/http3",
]

[dependencies]
async-executor = { version = "1.13.3", optional = true, default-features = false }
async-native-tls = { version = "0.5.0", optional = true, default-features = false }
async-trait = "0.1.89"
base64 = "0.22.1"
bytes = { version = "1.11" }
cookie = "0.15.2"
deboa = { workspace = true }
futures = "0.3.31"
futures-rustls = { version = "0.26.0", optional = true, default-features = false }
futures-util = { version = "0.3.31", optional = true, default-features = false }
h3 = { version = "0.0.8", optional = true, default-features = false }
h3-quinn = { version = "0.0.10", optional = true, default-features = false }
http = "1"
http-body = "1"
http-body-util = "0.1"
hyper = { version = "1.8.1", features = ["client"], default-features = false }
hyper-body-utils = { version = "0.1.7" }
hyper-util = { version = "0.1.20", features = [
  "client",
  "client-legacy",
  "tokio",
], default-features = false }
indexmap = "2.11.4"
log = "0.4.28"
minimime = "1.0.0"
mockall = "0.14.0"
quinn = { version = "0.11.7", optional = true, features = [
  "runtime-tokio",
], default-features = false }
rand = "0.9.2"
regex = "1.9.6"
rustls = { version = "0.23.36", optional = true, default-features = false }
rustls-native-certs = { version = "0.8.0", optional = true, default-features = false }
rustls-pki-types = { version = "1.13.2", optional = true, default-features = false }
rustls-platform-verifier = { version = "0.6.2", optional = true, default-features = false }
rustls-rustcrypto = { version = "0.0.2-alpha", optional = true, default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.17"
time = "=0.2.27"
tokio = { version = "1.38.1", features = [
  "macros",
  "fs",
], default-features = false }
tokio-rustls = { version = "0.26.4", optional = true, default-features = false }
tokio-util = { version = "0.7.11", features = ["io"], default-features = false }
trust-dns-resolver = { version = "0.23.2", features = [
  "tokio-runtime",
], default-features = false }
url = "2.5.8"
urlencoding = "2.1.3"
webpki-roots = { version = "1.0.6", optional = true, default-features = false }

[dev-dependencies]
criterion = { version = "0.8.2", features = [
  "html_reports",
  "async",
  "async_tokio",
] }
deboa-extras = { workspace = true, default-features = false }
deboa-fory = { workspace = true, default-features = false }
deboa-macros = { workspace = true }
easyhttpmock-vetis-tokio = { path = "../../easyhttpmock/easyhttpmock-vetis-tokio", features = [
  "http2",
  "rust-tls",
], default-features = false }
fory = "0.14.1"
fory-core = "0.14.0"
futures-util = "0.3.31"
mime = { version = "0.3.17" }
multer = "3.1.0"
tokio = { version = "1.38.1", features = [
  "macros",
  "fs",
], default-features = false }
vamo = { workspace = true, default-features = false }
vamo-macros = { workspace = true, features = [
  "json",
], default-features = false }

[[bench]]
name = "benchmark"
harness = false
